dnl Process this file with autoconf to produce a configure script.
AC_INIT(Makefile.am)

AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(clanbomber2,0.9.1)

#CXXFLAGS="-O6 -g3"

AC_PROG_CXX
AC_C_BIGENDIAN
#
# Find pkg-config
#
AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
if test x$PKG_CONFIG = xno ; then
  AC_MSG_ERROR([*** pkg-config not found. See http://pkgconfig.sourceforge.net])
fi

if ! pkg-config --atleast-pkgconfig-version 0.5 ; then
  AC_MSG_ERROR([*** pkg-config too old; version 0.5 or better required.])
fi


#
# Check for DirectFB
#
DIRECTFB_REQUIRED_VERSION=1.0.0

AC_MSG_CHECKING(for DirectFB)
if $PKG_CONFIG --atleast-version $DIRECTFB_REQUIRED_VERSION directfb ; then
      AC_MSG_RESULT(found)
      DIRECTFB_CFLAGS=`$PKG_CONFIG --cflags directfb`
      DIRECTFB_LIBS=`$PKG_CONFIG --libs directfb`
else
      AC_MSG_ERROR([
*** DirectFB $DIRECTFB_REQUIRED_VERSION or newer is required. The latest 
*** version of DirectFB is always available from http://www.directfb.org.
  ])
fi

AC_MSG_CHECKING(for FusionSound)
if $PKG_CONFIG --atleast-version $DIRECTFB_REQUIRED_VERSION fusionsound ; then
      AC_MSG_RESULT(found)
      FUSIONSOUND_CFLAGS=`$PKG_CONFIG --cflags fusionsound`
      FUSIONSOUND_LIBS=`$PKG_CONFIG --libs fusionsound`
else
      AC_MSG_ERROR([
*** FusionSound $DIRECTFB_REQUIRED_VERSION or newer is required. The latest 
*** version of FusionSound is always available from http://www.directfb.org.
  ])
fi

AC_ARG_ENABLE(tcp-only,
[  --enable-tcp-only       enable tcp-only networking/protocol (default=no)],,enable_tcp_only=no)
if test "x$enable_tcp_only" = xyes; then
  AC_DEFINE(ENABLE_TCP_ONLY, 1, [define if you want tcp-only networking/protocol])
fi

AC_SUBST(DIRECTFB_CFLAGS)
AC_SUBST(DIRECTFB_LIBS)
AC_SUBST(FUSIONSOUND_CFLAGS)
AC_SUBST(FUSIONSOUND_LIBS)


DATADIR=$datadir

AC_SUBST(DATADIR)

AC_OUTPUT([
Makefile
clanbomber/Makefile
clanbomber/maps/Makefile
clanbomber/pics/Makefile
clanbomber/wavs/Makefile
debian/Makefile
debian/changelog
])
